- Classpath URLs now no longer get displayed with the // after the scheme