@@ -148,7 +148,7 @@ abstract class Path[+PathType <: Path[PathType]](val ascent: Int, val elements: 
   @deprecated(message = "Use the query method instead.", since = "0.10.0")
   def /?[Q](q: Q)(implicit qt: QueryType[PathType, Q]) = query[Q](q)(qt)
 
-  def query[Q](q: Q)(implicit qt: QueryType[Pathtype, Q]) =
+  def query[Q](q: Q)(implicit qt: QueryType[PathType, Q]) =
     makePath(ascent, elements, qt.extras(afterPath, q))
 
   override def toString() =
