@@ -1,1 +1,2 @@
 - Classpath URLs now no longer get displayed with the // after the scheme
+- You should use the `query` method now in place of the symbolic /? method
